@@ -11,19 +11,15 @@
     <link rel="stylesheet" type="text/css" href="/css/green.css" title="green">
     <link rel="stylesheet" type="text/css" href="<?php bloginfo('stylesheet_url'); ?>">
 
-<?php
-    $msie = '/msie\s(5\.[5-9]|[6]\.[0-9]*).*(win)/i';
-    $agent = $_SERVER['HTTP_USER_AGENT'];
-    if( isset($agent) && preg_match($msie, $agent) && ! preg_match('/opera/i', $agent)) {
-?>
-    <link rel="stylesheet" type="text/css" href="/css/ie.css">
-<?php } else { ?>
     <link rel="alternate stylesheet" type="text/css" href="/css/blue.css" title="blue">
     <link rel="alternate stylesheet" type="text/css" href="/css/yellow.css" title="yellow">
     <link rel="alternate stylesheet" type="text/css" href="/css/pink.css" title="pink">
     <link rel="alternate stylesheet" type="text/css" href="/css/purple.css" title="purple">
     <link rel="alternate stylesheet" type="text/css" href="/css/gray.css" title="gray">
-<?php } ?>
+
+<!--[if gte IE 5]>
+    <link rel="stylesheet" type="text/css" href="/css/ie.css">
+<![endif]-->
 
     <link rel="alternate" type="application/rss+xml" title="RSS 2.0" href="<?php bloginfo('rss2_url'); ?>">
     <link rel="alternate" type="text/xml" title="RSS .92" href="<?php bloginfo('rss_url'); ?>">
